--- a/m/mr/mrs/mrsfields.com.html
+++ b/m/mr/mrs/mrsfields.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mrsfields.com privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210171931id_/http%3A//www.mrsfields.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mrsfields.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615023931id_/http%3A//www.mrsfields.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<title>Mrs. Fields Privacy Policy - MrsFields.com</title>
@@ -8,28 +8,15 @@
 	<meta name="keywords" content="privacy policy, privacy">
 	<link rel="icon" href="/images/tab_icon.png" type="image/png">
 
-	<link rel="stylesheet" href="/css/primary.css" type="text/css">
-	<link rel="stylesheet" href="/css/main_nav.css" type="text/css">
-	<link rel="stylesheet" href="/css/sub_page.css" type="text/css">
-	<link rel="stylesheet" href="/css/about_menu.css" type="text/css">
-	<link rel="stylesheet" href="/css/privacy/privacy.css" type="text/css">
-	<script language="JavaScript" src="/scripts/1133570620/primary.js" type="text/javascript"></script>
-	<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="/css/1145042948/primary.css" type="text/css">
+	<link rel="stylesheet" href="/css/1142447394/main_nav.css" type="text/css">
+	<link rel="stylesheet" href="/css/1146857662/sub_page.css" type="text/css">
+	<link rel="stylesheet" href="/css/1129065074/about_menu.css" type="text/css">
+	<link rel="stylesheet" href="/css/1121728408/privacy/privacy.css" type="text/css">
+	<script language="JavaScript" src="/scripts/1149263504/primary.js" type="text/javascript"></script>
+	<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
 	<script type="text/javascript">_uacct = "UA-92612-2"; urchinTracker();</script>
-	<script language="JavaScript" type="text/javascript">
-	<!-- Overture Services, Inc
-	var pm_tagname    = "universalTag.txt";
-	var pm_tagversion = "1.4";
-	var pm_accountid  = "66O7J6P9JNLV8M2B78CVG78KJ4";
-	var pm_scripthost = "srv.perf.overture.com";
-	var pm_customargs = "";
-	var pm_querystr = "?" + "ver=" + pm_tagversion + "&aid=" + pm_accountid + pm_customargs;
-	var pm_tag = "<SCR" + "IPT LANGUAGE='JavaScript' " + "SRC=//" + pm_scripthost + "/collweb/ScriptServlet" + pm_querystr + "></SCR" + "IPT>";
-	document.write(pm_tag);
-	// -->
-	</script><script language="JavaScript" src="//srv.perf.overture.com/collweb/ScriptServlet?ver=1.4&amp;aid=66O7J6P9JNLV8M2B78CVG78KJ4"></script>
-
-	<!-- Order ID: 1134235171.322303 -->
+	<!-- Order ID: 1150339171.248153 -->
 	<!-- Tracking:  -->
 </head>
 
@@ -57,7 +44,7 @@
 		</li>
 		<li>
 			<div class="caption" style="margin-top: 8px;">
-				<a href="javascript: openWindow( 'LiveAssistance', '/chat/', 380, 360, 0 );">live chat</a>
+				<a href="/contact/">contact us</a>
 			</div>
 		</li>
 		<li>
@@ -86,93 +73,23 @@
 	<li style="width: 100px;">
         <h2>gift occasion</h2>
 		<ul>
-			<li class="first">
-				<a href="http://www.mrsfields.com/categories/Christmas_Gifts">Christmas Gifts</a>
-			</li>
-			<li>
-				<a href="http://www.mrsfields.com/categories/Holiday_Gift_Collection" style="background-image: url( '/images/menu_arrow_sm.gif' ); background-repeat: no-repeat; background-position: 205px 10px;">Holiday Gift Collection</a>
-				<ul>
-					<li class="subMenu">
-						<a href="http://www.mrsfields.com/categories/Top_10_Holiday_Gifts">Top 10 Holiday Gifts</a>
-					</li>
-					<li class="subMenu">
-						<a href="http://www.mrsfields.com/categories/Holiday_gift_bundles">Holiday Gift Bundles</a>
-					</li>
-					<li class="subMenu">
-						<a href="http://www.mrsfields.com/categories/Stocking_stuffers">Stocking Stuffers</a>
-					</li>
-					<li class="subMenu">
-						<a href="http://www.mrsfields.com/categories/Hanukkah_gifts">Hanukkah Gifts</a>
-					</li>
-					<li class="subMenu">
-						<a href="http://www.mrsfields.com/categories/Holiday_Gifts_25_40">Holiday Gifts $25. - $40.</a>
-					</li>
-					<li class="subMenu">
-						<a href="http://www.mrsfields.com/categories/Holiday_Gifts_40_60">Holiday Gifts $40. - $60.</a>
-					</li>
-					<li class="subMenu">
-						<a href="http://www.mrsfields.com/categories/Holiday_gifts_60_80">Holiday Gifts $60. - $80.</a>
-					</li>
-					<li class="subMenu">
-						<a href="http://www.mrsfields.com/categories/Holiday_gifts_80_and_up">Holiday Gifts $80. and Up</a>
-					</li>
-					<li class="subMenu">
-						<a href="http://www.mrsfields.com/categories/Holiday_hostess_gifts">Holiday Hostess Gifts</a>
-					</li>
-					<li class="subMenu">
-						<a href="http://www.mrsfields.com/categories/Seasons_Greetings_Happy_Holidays">Seasons Greetings / Happy Holidays</a>
-					</li>
-					<li class="subMenu">
-						<a href="http://www.mrsfields.com/categories/Holiday_Gift_Baskets">Holiday Gift Baskets</a>
-					</li>
+			<li class="first"><a href="http://www.mrsfields.com/categories/Fathers_Day">Father's Day June 18th</a>				</li>
+			<li><a href="http://www.mrsfields.com/categories/Graduation_Gifts">Graduation Gifts</a>				</li>
+			<li><a href="http://www.mrsfields.com/categories/Summer_Gifts">Summer Camp Gifts</a>				</li>
+			<li><a href="http://www.mrsfields.com/categories/happy_birthday_gifts">Happy Birthday</a>				</li>
+			<li><a href="http://www.mrsfields.com/categories/Thinking_Of_You_Gifts">Thinking Of You</a>				</li>
+			<li><a href="http://www.mrsfields.com/categories/thank_you">Thank You</a>				</li>
+			<li><a href="http://www.mrsfields.com/categories/get_well_soon_baskets_and_cookie_tins">Get Well Soon</a>				</li>
+			<li><a href="http://www.mrsfields.com/categories/Gifts_Mrs_Fields_Brownie_Gifts_Cookies">Any Occasion Gifts</a>				</li>
+			<li><a href="http://www.mrsfields.com/categories/corporate_gift_mrs_fields_corporate_baskets" style="background-image: url( '/images/menu_arrow_sm.gif' ); background-repeat: no-repeat; background-position: 205px 10px;">Corporate Gifts</a>				<ul>
+					<li class="subMenu firstChild">		<a href="http://www.mrsfields.com/categories/house_warming_gift_realtor_house_closing">Housewarming/Realtor</a>						</li>
+					<li class="subMenu">		<a href="http://www.mrsfields.com/categories/Great_Job">Great Job</a>						</li>
+					<li class="subMenu">		<a href="http://www.mrsfields.com/categories/thank_you">Thank You</a>						</li>
 
 				</ul>
-			</li>
-			<li>
-				<a href="http://www.mrsfields.com/categories/happy_birthday_gifts">Happy Birthday</a>
-			</li>
-			<li>
-				<a href="http://www.mrsfields.com/categories/thank_you_gift_package_cookie_box">Thank You</a>
-			</li>
-			<li>
-				<a href="http://www.mrsfields.com/categories/get_well_soon_baskets_and_cookie_tins">Get Well Soon</a>
-			</li>
-			<li>
-				<a href="http://www.mrsfields.com/categories/Recognition_Gift_Cookie_Gift_Baskets">Recognition Gifts</a>
-			</li>
-			<li>
-				<a href="http://www.mrsfields.com/categories/Gifts_Mrs_Fields_Brownie_Gifts_Cookies">Any Occasion Gifts</a>
-			</li>
-			<li>
-				<a href="http://www.mrsfields.com/categories/corporate_gift_mrs_fields_corporate_baskets" style="background-image: url( '/images/menu_arrow_sm.gif' ); background-repeat: no-repeat; background-position: 205px 10px;">Corporate Gifts</a>
-				<ul>
-					<li class="subMenu">
-						<a href="http://www.mrsfields.com/categories/house_warming_gift_realtor_house_closing">Housewarming/Realtor</a>
-					</li>
-					<li class="subMenu">
-						<a href="http://www.mrsfields.com/categories/Recognition_Gift_Cookie_Gift_Baskets">Recognition Gifts</a>
-					</li>
-					<li class="subMenu">
-						<a href="http://www.mrsfields.com/categories/thank_you_gift_package_cookie_box">Thank You</a>
-					</li>
-
-				</ul>
-			</li>
-			<li>
-				<a href="http://www.mrsfields.com/categories/newborn_baby_gifts_baskets">New Baby</a>
-			</li>
-			<li>
-				<a href="http://www.mrsfields.com/categories/Mrs_Fields_Gift_Baskets_Anniversary_Gifts">Anniversary/Romance</a>
-			</li>
-			<li>
-				<a href="http://www.mrsfields.com/categories/College_Care_Packages_cookie_assortments_mrs_fields_cookies">College Care Packages</a>
-			</li>
-			<li>
-				<a href="http://www.mrsfields.com/categories/smiley_face_cookies_cheer_up_kids_gifts">Just Smile :-)</a>
-			</li>
-			<li>
-				<a href="http://www.mrsfields.com/categories/Happy_New_Year">Happy New Year</a>
-			</li>
+				</li>
+			<li><a href="http://www.mrsfields.com/categories/newborn_baby_gifts_baskets">New Baby</a>				</li>
+			<li><a href="http://www.mrsfields.com/categories/Mrs_Fields_Gift_Baskets_Anniversary_Gifts">Anniversary/Romance</a>				</li>
 		</ul>
 	</li>
 
@@ -180,6 +97,7 @@
         <h2>price</h2>
 		<ul>
 			<li class="first"><a href="/categories/special_values">Online Specials</a></li>
+
 			<li><a href="/by_price/less_than_$25.00">Under $25.00</a></li>
 			<li><a href="/by_price/from_$25.00/to_$35.00">$25.00 to $35.00</a></li>
 			<li><a href="/by_price/from_$35.00/to_$45.00">$35.00 to $45.00</a></li>
@@ -192,64 +110,42 @@
 	<li style="width: 95px;">
         <h2>treat menu</h2>
 		<ul>
-			<li class="first">
-				<a href="/types/mrs_fields_cookie_basket_assortments">Cookies</a>
-			</li>
-			<li>
-				<a href="/categories/Decorated_Cookies_Giant_Cookie_cookie_cake">Decorated Cookie Cakes</a>
-			</li>
-			<li>
-				<a href="/types/mrs_fields_nibblers_cookie_gift_baskets">Nibblers® Bite Sized Cookies</a>
-			</li>
-			<li>
-				<a href="/types/brownie_gifts_baskets">Brownies</a>
-			</li>
-			<li>
-				<a href="/types/cakes_muffins_and_more">Cakes/Muffins &amp; More</a>
-			</li>
-			<li>
-				<a href="/types/fruit">Gourmet Fruit</a>
-			</li>
+
+			<li class="first"><a href="/types/mrs_fields_cookie_basket_assortments">Cookies</a>				</li>
+			<li><a href="http://www.mrsfields.com/categories/Gourmet_Cakes_and_Cheesecakes">Gourmet Cakes</a>				</li>
+			<li><a href="/categories/Decorated_Cookies_Giant_Cookie_cookie_cake">Decorated Cookie Cakes</a>				</li>
+			<li><a href="http://www.mrsfields.com/categories/Bake_at_Home">Bake at Home</a>				</li>
+			<li><a href="/types/mrs_fields_nibblers_cookie_gift_baskets">Nibblers® Bite Sized Cookies</a>				</li>
+			<li><a href="/types/brownie_gifts_baskets">Brownies</a>				</li>
+			<li><a href="http://www.mrsfields.com/categories/Cookie_bouqets">Cookie Bouquets</a>				</li>
+			<li><a href="/types/cakes_muffins_and_more">Cakes/Muffins &amp; More</a>				</li>
+			<li><a href="/types/fruit">Gourmet Fruit</a>				</li>
 		</ul>
 	</li>
 
 	<li style="width: 74px;">
 		<h2>novelty</h2>
 		<ul>
-			<li class="first">
-				<a href="http://www.mrsfields.com/categories/gift_baskets_muffin_basket">Gift Baskets</a>
-			</li>
-			<li>
-				<a href="http://www.mrsfields.com/categories/Gourmet_Fruit_Gifts">Gourmet Fruit Gifts</a>
-			</li>
-			<li>
-				<a href="http://www.mrsfields.com/categories/For_Kids_Cookie_Brownie_Gifts">For Kids</a>
-			</li>
-			<li>
-				<a href="http://www.mrsfields.com/categories/Decorated_Cookies_Giant_Cookie_cookie_cake">Decorated Cookies</a>
-			</li>
-			<li>
-				<a href="http://www.mrsfields.com/categories/smiley_face_cookies_cheer_up_kids_gifts">Just Smile :-)</a>
-			</li>
-			<li>
-				<a href="http://www.mrsfields.com/categories/Cookie_Jars_cookie_assortment_Mrs_Fields_Cookies">Cookie Jars</a>
-			</li>
-			<li>
-				<a href="http://www.mrsfields.com/categories/Treat_of_the_month_program">Treat of the Month Program</a>
-			</li>
+			<li class="first"><a href="http://www.mrsfields.com/categories/gift_baskets">Gift Baskets &amp; Bundles</a>				</li>
+			<li><a href="http://www.mrsfields.com/categories/Americana_Gifts">Americana Gifts</a>				</li>
+			<li><a href="http://www.mrsfields.com/categories/Cookie_Flower_Bouquets">Roses and Cookie Bouquets</a>				</li>
+			<li><a href="http://www.mrsfields.com/categories/For_Kids_Cookie_Brownie_Gifts">For Kids</a>				</li>
+			<li><a href="http://www.mrsfields.com/categories/just_smile">Just Smile :-)</a>				</li>
+			<li><a href="http://www.mrsfields.com/categories/Treat_of_the_month_program">Treat of the Month Program</a>				</li>
 			<li><a href="/misc/personalization/">Gift Personalization</a></li>
 			<li><a href="/giftcertificates/">e-Gift Certificates</a></li>
+			<li><a href="/recipe/">Recipe of the Month</a></li>
 		</ul>
 	</li>
+
 
 
 <li style="width: 124px; cursor:pointer;" onclick="window.location='/corporate/'">
 	<h2>corporate gifting</h2>
 </li>
 
-
-		<li style="width: 85px;">
-        <h2>catalog</h2>
+	<li style="width: 85px; padding-right: 2px;">
+		<h2>catalog</h2>
 		<ul>
 			<li class="first"><a href="/Catalog_Mrs_Fields_Gifts_Cookies_Gift_Catalog_Mail_Order_Cookies/">Online Catalog</a></li>
 			<li><a href="/catalogrequest/">Send Me A Catalog</a></li>
@@ -261,33 +157,32 @@
 
 	
 	<li style="width:122px; text-align:center; cursor:pointer;" onclick="window.location='/cookieclub/'">
-		<h2 style="font-size: 10px; padding:4px 0px 2px 0px;">Sign up for emails <br> and save 5%</h2>
+		<h2 style="font-size: 10px; padding:4px 0px 2px 0px;">Sign up for emails <br> and save 10%</h2>
 	</li>
 
 </ul>
-
 
 <div id="subHolder">
 <div id="subPageMenu">
 
 	<div id="subLogo">
 		<a href="http://www.mrsfields.com/">
-			<img src="/images/logo_sub_fresh.gif" width="196" height="150" alt="Mrs. Fields Gifts, Inc.">		</a>
+			<img src="/images/logo_sub_more.gif" width="196" height="150" alt="Mrs. Fields Gifts, Inc.">		</a>
 	</div>
 
 	<div id="subMenu">
 
 
-		<div id="subBlurb" style="font-size: 14px;">Reward someone special<br>with irresistible treats from<br>Mrs. Fields®.</div>
+		<div id="subBlurb" style="font-size: 14px;">Our special cookie agents can<br>handle international orders,<br>or APO/FPO orders.<br>Just call 1-800-COOKIES.</div>
 	</div>
 
 <div id="featuredGift">
-	<div id="fg_image"><a href="/featured_gifts/Deluxe_Basket_Of_Cookies_and_Brownie/44/true"><img src="/files/products/776_100x115.jpg" width="100" height="115" border="0" alt="deluxe gift basket" style="border: none;"></a></div>
+	<div id="fg_image"><a href="/featured_gifts/Mrs_Fields_gift_crates/129/true"><img src="/files/products/779_100x115.jpg" width="100" height="115" border="0" alt="Mrs. Fields crates" style="border: none;"></a></div>
 	<div id="fg_text">
-		<div id="fg_title_img"><img src="/images/titles/ttl_featured_gift.gif" border="0" width="70" height="13" style="border: none;"></div>
+		<div id="fg_title_img"><img src="/images/titles/ttl_featured_gift.gif" border="0" width="70" height="13" style="border: none;" alt=""></div>
 		<div id="fg_descr">
-			<a href="/featured_gifts/Deluxe_Basket_Of_Cookies_and_Brownie/44/true">Mrs. Fields sentiment combination basket. A deluxe assortment of treats with your choice of ribbon.</a><br>
-			<div id="fg_shop"><a href="/categories/Mrs_Fields_Cookie_Best_Gift_Send_Gift">Shop Featured Gifts</a></div>
+			<a href="/featured_gifts/Mrs_Fields_gift_crates/129/true">Send a care package filled with luscious treats. Mrs. Fields® gift crates, in 2 sizes for sharing</a><br>
+			<div id="fg_shop_sub"><a href="/categories/Mrs_Fields_Cookie_Best_Gift_Send_Gift">Shop Featured Gifts</a></div>
 		</div>
 	</div>
 </div>
@@ -376,7 +271,7 @@
 	440 West Lawndale Drive<br>
 Salt Lake City, Utah 84115<br>
 	Phone: 1.800.COOKIES<br>
-	R<span>oger<span>F@mr<span>sfields.com</span></span></span></p>
+	R<span>og<span>erF@m<span>rsfields.com</span></span></span></p>
 
 </div>
 </div>
