--- a/p/ph/pho/photos.com.html
+++ b/p/ph/pho/photos.com.html
@@ -1,17 +1,15 @@
-<!--The following is the downloaded HTML source of the photos.com privacy policy that was archived on 2005-12-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051225043005id_/http%3A//www.photos.com/en/company/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the photos.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615024006id_/http%3A//photos.com/en/company/privacy) for the most accurate reproduction.-->
 
 <html><head>
 <link rel="shortcut icon" type="image/ico" href="http://static-p.arttoday.com/d/photos/images/favicon.ico">
 <meta name="AUTHOR" content="Photos.com">
 <title>Stock Photos - Royalty-Free Stock Photos by Subscription at Photos.com</title>
 <meta name="TITLE" content="Stock Photos - Royalty-Free Stock Photos by Subscription at Photos.com">
-<meta name="KEYWORDS" content="stock photos, royalty-free stock photos, images, low cost, high resolution, Stock Photos, 
-     Royalty-Free Stock Photos, Images, Low Cost, High Resolution, STOCK PHOTOS">
+<meta name="KEYWORDS" content="stock photos, royalty-free stock photos, images, low cost, high resolution, Stock Photos, Royalty-Free Stock Photos, Images, Low Cost, High Resolution, STOCK PHOTOS">
 <meta name="DESCRIPTION" content="Stock Photos - Royalty-Free Stock Photos - Images Low Cost High Resolution at Photos.com.  
-     Download royalty-free stock photos and high resolution stock images at one low cost at the best among stock photography subscription services websites.  
-     Build a lightbox, search collections for photos of churches, medical photos, dogs and animals photos, and more!">
-<meta name="COPYRIGHT" content="Copyright (c) 2005 by Jupiterimages, a division of Jupitermedia Corporation. All Rights Reserved.">
+Download royalty-free stock photos and high resolution stock images at one low cost at the best among stock photography subscription services websites.  Build a lightbox, search collections for photos of churches, medical photos, dogs and animals photos, and more!">
+<meta name="COPYRIGHT" content="Copyright (c) 2006 by Jupiterimages, a division of Jupitermedia Corporation. All Rights Reserved.">
 
 <meta name="ROBOTS" content="INDEX, FOLLOW">
 <meta name="revisit-after" content="1 days">
@@ -87,13 +85,6 @@ function comments (lightbox) {
    'preview_pop',
    'width=500,height=330,left=300,top=200,directories=no,status=no,scrollbars=no,resizable=no,menubar=no');
     comm.focus();
-}
-
-function countries (fn,c) {
-   var csel = window.open('/en/popups/countries?fn=' + fn + '&c=' + c, 
-   'country_select',
-   'width=400,height=150,left=300,top=200,directories=no,status=no,scrollbars=no,resizable=no,menubar=no');
-    csel.focus();
 }
 
 function privacy() 
@@ -191,7 +182,8 @@ function _cls () {window.status = ''; return true}
 <table width="98%" cellpadding="0" cellspacing="0" border="0">
   <tbody><tr>
     <td height="34" valign="middle">
-      <a href="/en/"><img src="http://static-p.arttoday.com/d/photos/images/logos/pdc_logo4.gif" width="155" height="14" border="0" hspace="10" alt="Stock Photos - Royalty Free Stock Photos - Images Low Cost High Resolution at Photos.com.  Download royalty free stock photos and high resolution stock images at one low cost at the best among stock photography subscription services websites.  Build a lightbox, search collections for photos of churches, medical photos, dogs and animals photos, and more!"></a>
+      <a href="/en/"><img src="http://static-p.arttoday.com/d/photos/images/logos/pdc_logo4.gif" width="155" height="14" border="0" hspace="10" alt="Stock Photos - Royalty-Free Stock Photos - Images Low Cost High Resolution at Photos.com.  
+Download royalty-free stock photos and high resolution stock images at one low cost at the best among stock photography subscription services websites.  Build a lightbox, search collections for photos of churches, medical photos, dogs and animals photos, and more!"></a>
     </td>
     <td valign="middle" align="right">
       <div id="menu">
@@ -200,7 +192,7 @@ function _cls () {window.status = ''; return true}
   <tbody><tr>
     <td><div id=""><a href="/en/">Home</a></div></td>
     <td><a href="https://www.photos.com/en/join/index">Subscribe</a></td>
-    <td><div id=""><a href="/en/sign_in/">Sign In</a></div></td>
+    <td><div id="signinout"><a href="/en/sign_in/">Sign In</a></div></td>
     <td><div id=""><a href="/en/lightbox/index">Lightbox</a></div></td>
     <td><div id=""><a href="/en/help/index">FAQ</a></div></td>
   </tr>
@@ -584,8 +576,6 @@ if('') {
 
 
 
-
-
 <!-- END: /en/search/advanced_inputs_color -->
     </form></td>
     <td valign="top" margin-right:10px;="">
@@ -685,7 +675,7 @@ Please note that your use of the JUPM network of Web sites is governed by our <a
       <a href="/en/change_language?l=es&amp;nvc_lang=es" title="Español">Español</a></b>
 
 
-<br>&nbsp;&nbsp;&nbsp;© 2005 <a href="http://www.jupiterimages.com/" target="_blank">Jupiterimages Corporation</a>.<br>
+<br>&nbsp;&nbsp;&nbsp;© 2006 <a href="http://www.jupiterimages.com/" target="_blank">Jupiterimages Corporation</a>.<br>
 
 
 
@@ -714,6 +704,15 @@ Please note that your use of the JUPM network of Web sites is governed by our <a
       </div>
 </font>
 </center>
+
+
+<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-395258-1";
+urchinTracker();
+</script>
+
 
 
 
