--- a/m/ma/mar/marines.com.html
+++ b/m/ma/mar/marines.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the marines.com privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219092305id_/http%3A//marines.com/page/MarinesPrivacyPolicy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the marines.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615024010id_/http%3A//marines.com/page/MarinesPrivacyPolicy.jsp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -270,7 +270,7 @@ loadFlag = false;
 
 
 
-<title>U.S. Marine Corps - Marines Privacy Policy</title>
+<title>Marines Privacy Policy | Official Recruiting Site for the U.S. Marine Corps</title>
 
 </head>
 
@@ -301,7 +301,7 @@ loadFlag = false;
 
   <div id="logo"><a href="/page/Home.jsp"><img src="/image/1090.gif" width="218" height="88" alt="Marines.com Home" title="Marines.com Home" border="0"></a></div>
   <div class="toprtnav">
-<a href="/forms/processLead.do" title="Request More Information">REQUEST MORE INFORMATION<img src="/image/1089.gif" class="arrow" width="11" height="8" alt="" border="0"></a><br><img src="/image/1088.gif" class="line" width="200" height="1" alt=""><br><div class="btm"><a href="/page/Parental-Guide.jsp" title="Parental Guide">PARENTAL GUIDE</a><br><a href="/page/Marines-SiteMap.jsp" title="Site Map">SITE MAP</a></div>
+<a href="/forms/processLead.do" title="Request More Information">REQUEST MORE INFORMATION<img src="/image/1089.gif" class="arrow" width="11" height="8" alt="" border="0"></a><br><img src="/image/1088.gif" class="line" width="200" height="1" alt=""><br><div class="btm"><a href="http://parents.marines.com" title="Parental Guide">PARENTAL GUIDE</a><br><a href="/page/Marines-SiteMap.jsp" title="Site Map">SITE MAP</a></div>
   </div>
 
 
@@ -1321,7 +1321,7 @@ loadFlag = false;
         
 		
 
-         <li><a href="/page/Combat-Rigid-Raiding-Craft--CRRC-.jsp">Combat Rigid Raiding Craft (CRRC)</a></li>
+         <li><a href="/page/Combat-Rubber-Reconnaissance-Craft--CRRC-.jsp">Combat Rubber Reconnaissance Craft (CRRC)</a></li>
 
 		
         
@@ -1415,21 +1415,17 @@ Your privacy is important to us. Our privacy policy explains how we intend to us
 <p>For management of the Web site, information is collected for statistical purposes. This Web site uses software programs to create summary statistics, which are used for such purposes as assessing what information is of most and least interest, determining technical design specifications, and identifying system performance or problem areas.</p>
 
 <p>For Web site security purposes and to ensure that this site remains available to all users, this Web site employs software programs to monitor network traffic to identify unauthorized attempts to upload or change information, or otherwise cause damage.</p> 
-
 <p>Except for authorized law enforcement investigations, no other attempts are made to identify individual users or their usage habits. Raw data logs are used for no other purposes than authorized law enforcement activities, and are scheduled for regular destruction in accordance with National Archives and Records Administration General Schedule 20.</p>
 
 <p>For purposes of evaluating site navigation, cookies are used in a limited manner. Cookies are pieces of information that a Web site transfers to your computer's hard disk for record-keeping purposes. Cookies can make the Web more useful by storing information about your preferences on a particular site. The use of cookies is an industry standard, and many major Web sites use them to provide useful features for their customers. Cookies in and of themselves do not personally identify users, although they do identify a user's computer. Most browsers are initially set up to accept cookies. If you'd prefer, you can set yours to refuse cookies. However, you may not be able to take full advantage of a Web site if you do so.</p> 
 
-<p>Marines.com also uses pixels, or transparent GIF files, to help manage online advertising. These GIF files are provided by our ad management partner, DoubleClick. These files enable DoubleClick to recognize a unique cookie on your Web browser, which in turn enables us to learn which advertisements bring users to our Web site. The cookie was placed by us, or by another advertiser who works with DoubleClick. With both cookies and Spotlight technology, the information that we collect and share is anonymous and not personally identifiable. It does not contain your name, address, telephone number, or email address.</p>
+<p>Marines.com uses pixels, or transparent GIF files, to help manage online advertising. These GIF files are provided by our ad management partner, DoubleClick. These files enable DoubleClick to recognize a unique cookie on your Web browser, which in turn enables us to learn which advertisements bring users to our website. The cookie was placed by us, or by another advertiser who works with DoubleClick. With both cookies and Spotlight technology, the information that we collect and share is anonymous and not personally identifiable. It does not contain your name, address, telephone number, or email address. For more information about DoubleClick, including information about how to opt out of these technologies, go to <a href="http://www.doubleclick.net/us/corporate/privacy" class="redlinkage" target="_blank">http://www.doubleclick.net/us/corporate/privacy</a>.</p>
 
 <p><b>Accessibility:</b><br>
-The Marine Corps is constantly working to ensure that this Web site is accessible to all visitors. If you find a problem that prevents access, please use the form available on the <a href="/forms/reportProblem.do" class="redlinkage">Report Technical Problems</a> page.</p>
+In 1998, Section 508 of the Rehabilitation Act Amendments, as amended by the Workforce Investment Act of 1998, issued accessibility standards setting forth electronic and information technology performance criteria. As amended, Section 508 requires that when Federal agencies develop, procure, maintain, or use electronic and information technology, they must ensure that this information is accessible to every individual.  The Marine Corps is constantly working to ensure that this Web site is accessible to all visitors. If you find a problem that prevents access, please use the form available on the <a href="/forms/reportProblem.do" class="redlinkage">Report Technical Problems</a> page.</p>
 
 <p><b>Links:</b><br>
 The appearance of hyperlinks to other Web sites on Marines.com does not constitute endorsement by the U.S. Marine Corps or affiliation or association with such Web sites. The Marine Corps does not exercise any editorial control over the information you may find at these site locations. The purpose of providing these links is exclusively to assist your pursuit of further information about the Marine Corps.</p>
-
-<p><b>Event Photo Release:</b><br>
-The U.S. Marine Corps provides an online event photo pick-up service free-of-charge to event attendees and uses the information provided for recruiting purposes only. Disclosure is voluntary. The appearance of the photo pick-up hyperlink to PictureU.com does not constitute an endorsement by the U.S. Marine Corps or affiliation or association with PictureU.com. By accepting the photo card at an event after your picture is taken, you expressly consent to the use of any and all images by PictureU.com for all purposes related to the company's business. You also release PictureU.com and the U.S. Marine Corps and their agents and employees from any liability arising out of or related to the taking or publishing of this photograph and agree to indemnify and hold harmless PictureU.com, the U.S. Marine Corps and their agents and employees from any such liability, whether the result of negligence, intentional wrongdoing or other acts of PictureU.com, the U.S. Marine Corps or of their agents or employees.</p>
 
 <p><b>Unsubscribe:</b><br>
 Subject to the above provisions, by using and providing information on Marines.com, you consent to the collection and use of information by the U.S. Marine Corps and the terms of this Privacy Policy. The U.S. Marine Corps may change our Privacy Policy from time to time and we will post those changes on this Privacy Policy so that you are always aware of what information we collect, how we use it, and under what circumstances we may disclose it. By using and providing information on Marines.com, you agree to be legally bound and to abide by the changes and other provisions contained in the Privacy Policy.</p>
