--- a/a/au/aut/authorhouse.com.html
+++ b/a/au/aut/authorhouse.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the authorhouse.com privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210063335id_/http%3A//www.authorhouse.com/W3C/PrivacyPolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the authorhouse.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615024058id_/http%3A//www.authorhouse.com/W3C/PrivacyPolicy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html lang="en-us" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-us"><!-- The above DOCTYPE and html lines and the meta http-equiv line below the head are critical. DO NOT DELETE them --><head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -21,16 +21,23 @@
 		
 			<script src="http://www.authorhouse.com/js/global.js" type="text/javascript">
 
-</script><script src="http://www.authorhouse.com/js/__utm.js" type="text/javascript">
-
 </script>
 		
 		
 			<link href="http://www.authorhouse.com/favicon.ico" type="image/x-icon" rel="shortcut icon">
 		
-		<meta name="copyright" content="Copyright 2004 Author Solutions Inc.">
+		<meta name="copyright" content="Copyright 2006 Author Solutions Inc.">
 		<meta name="robots" content="index, follow">
 		<meta name="GOOGLEBOT" content="index, follow">
+		
+			
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
+<script type="text/javascript">
+	_uacct = "UA-124760-3";
+	urchinTracker();
+</script>
+
+		
 	</head>
 	<body id="body">
 		
@@ -188,7 +195,7 @@
 						</div>
 						
 							<div id="FooterLinks">
-								<div id="FooterLinksCol1">© 2005 Author Solutions Inc. - All rights reserved</div>
+								<div id="FooterLinksCol1">© 2006 Author Solutions Inc. - All rights reserved</div>
 								<div id="FooterLinksCol2">
 									<a href="http://www.authorhouse.com/W3C/SiteMap.aspx">Site Map</a> | <a href="http://www.authorhouse.com/W3C/BrowserRequirements.asp">Browser Requirements</a> | <a href="http://www.authorhouse.com/W3C/PrivacyPolicy.asp" class="NavSelected">Privacy Policy</a> | <a href="http://www.authorhouse.com/ChangeLanguage.aspx">Change Language</a>
 								</div>
